--- a/Minesweeper Initial Dev Assignment/Properties/Resources.resx
+++ b/Minesweeper Initial Dev Assignment/Properties/Resources.resx
@@ -118,32 +118,11 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="FLAG_BLUE" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\FLAG_BLUE.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="FLAG_RED" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\FLAG_RED.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="NUM_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\NUM_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="NUM_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\NUM_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="NUM_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NUM_3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="NUM_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\NUM_4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="NUM_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\NUM_5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="NUM_6" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\NUM_6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="NUM_7" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\NUM_7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="FLAG_RED" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FLAG_RED.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="NUM_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NUM_8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -153,5 +132,29 @@
   </data>
   <data name="TILE_CLEAR" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TILE_CLEAR.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FLAG_BLUE" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FLAG_BLUE.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NUM_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NUM_5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NUM_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NUM_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NUM_7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NUM_7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NUM_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NUM_4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NUM_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NUM_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NUM_6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NUM_6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="BACKGROUND" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BACKGROUND.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
